@@ -1,7 +1,7 @@
 package com.clickbus.restapi.entity.testdata;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 
 import com.clickbus.restapi.entity.ClientApplication;
 import com.clickbus.restapi.entity.Place;
@@ -18,7 +18,7 @@ public class PlaceTestData {
             .setAddress("Rua 123")
             .setCreatedAt(BASE_TIME)
             .setUpdatedAt(BASE_TIME.plusSeconds(1))
-            .setClientApplications(Arrays.asList(
+            .setClientApplications(List.of(
                 new ClientApplication().setId(1L),
                 new ClientApplication().setId(2L),
                 new ClientApplication().setId(4L)
